# mcp-google-keep

./: .gitignore  .mcp.json  CLAUDE.md  README.md  keep_setup.py  pyproject.toml  server.py  setup.py
.claude-plugin/: plugin.json
docs/: authentication.mdx  index.mdx  installation.mdx  tools.mdx  troubleshooting.mdx
skills/keep-capture/: SKILL.md
skills/keep-todo/: SKILL.md
