[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-google-keep"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "gkeepapi",
    "gpsoauth",
    "keyring",
    "rich",
]

[project.scripts]
mcp-google-keep = "server:main"
mcp-google-keep-setup = "keep_setup:main"

[tool.setuptools]
py-modules = ["server", "keep_setup"]
